✨ NEW FEATURE: component create a new category

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -13,6 +13,7 @@
   --dark-700: #1d1d2e;
   --gray-100: #8a8a8a;
   --green-900: #3fffa3;
+  --green-400: #b6d048;
   --red-900: #ea1d2c;
   --red-700: #ff3f4b;
 }
