--- a/src/pages/product/styles.module.scss
+++ b/src/pages/product/styles.module.scss
@@ -16,6 +16,36 @@
     flex-direction: column;
     margin: 1rem 0;
 
+    label {
+      width: 100%;
+      height: 280px;
+      background-color: var(--dark-900);
+      margin-bottom: .7rem;
+      border-radius: .2rem;
+      cursor: pointer;
+      border: 1px solid var(--gray-100);
+
+      display: flex;
+      justify-content: center;
+      align-items: center;
+
+      input {
+        display: none;
+      }
+
+      span {
+        z-index: 99;
+        position: absolute;
+        opacity: .7;
+        transition: all .5s;
+
+        &:hover {
+          opacity: 1;
+          transform: scale(1.2);
+        }
+      }
+    }
+
     textarea {
       width: 100%;
       min-height: 120px;
@@ -64,4 +94,12 @@
       }
     }
   }
+}
+
+.previewImg {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  background-size: cover;
+  border-radius: .2rem;
 }
